src/app/shared/layout/top-bar/clients-navigation/clients-navigation.component.less
:host {
  margin: auto;
  height: 51px;

  .user-card-container {
    position: relative;
    display: flex;
    align-items: center;
    background: var(--navbar-bg);
    border-radius: 8px;
    // padding: 0 8px;
    min-height: 51px;
    font-family: inherit;
    margin: 0px 10px;
    margin-top: 1px;
    min-width: 350px;
  }

  .search-bar {
    background-color: transparent !important;
  }

  ::ng-deep {
    .dx-icon-clear {
      cursor: pointer;
    }
  }

  .nav-btn {
    background: var(--navbar-bg);
    border: none;
    padding: 0;
    font-size: 18px;
    height: 51px;
    display: flex;
    align-items: center;
    cursor: pointer;
    width: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid var(--border-color);

    &.left {
      margin-right: 1px;
      border-top-left-radius: 8px;
      border-bottom-left-radius: 8px;

      &::after {
        content: '';
        display: block;
        background-color: transparent;
        width: 2px;
        height: 46px;
      }
    }

    &.right {
      margin-left: 1px;
      border-top-right-radius: 8px;
      border-bottom-right-radius: 8px;

      &::before {
        content: '';
        display: block;
        background-color: transparent;
        width: 2px;
        height: 46px;
      }
    }
    img {
      height: 51px;
    }
  }

  .user-card-content {
    display: flex;
    align-items: center;
    background: none;
    padding: 2px 8px;
    border-radius: 6px;
    flex: 1;
    min-width: 0;

    .icon-building {
      color: var(--primary-color, #1e335c);
      font-size: 18px;
      margin-right: 10px;
      display: flex;
      align-items: center;
      width: 18px;
      height: 28px;
      background-repeat: no-repeat;
      background-size: contain;
      background-image: url('assets/common/icons/contact/building.svg');

      .dark-theme & {
        background-image: url('assets/common/icons/contact/building-dark.svg');
      }
    }

    .name-role {
      display: flex;
      align-items: center;
      min-width: 0;

      .name {
        width: 155px;
        overflow: hidden;
        text-overflow: ellipsis;
        color: var(--nav-text-color, #1e335c);
        font-size: 15px;
        margin-right: 4px;
        white-space: nowrap;
      }

      .divider {
        width: 1px;
        height: 16px;
        background: var(--divider-color, #dbeafe);
        margin: 0 7px;
        display: inline-block;
      }

      .role {
        width: 70px;
        color: var(--muted-color, #1e335c);
        overflow: hidden;
        text-overflow: ellipsis;
        font-weight: 400;
        font-size: 15px;
        white-space: nowrap;
      }
    }

    .dropdown-btn,
    .close-btn {
      background: transparent;
      border: none;
      color: var(--muted-color, #b3b9c4);
      margin-left: 6px;
      font-size: 16px;
      height: 28px;
      width: 28px;
      aspect-ratio: 1/1;
      display: flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;
      margin-right: 2px;

      &:hover {
        color: var(--primary-color);
        background: #e5e7eb;
        border-radius: 50%;
      }
    }

    .dropdown-btn {
      margin-left: 18px; // extra space before dropdown
    }
  }
}

.dropdown-list {
  display: flex;
  flex-direction: column;
  width: 300px;
}

.dropdown-item {
  display: flex;
  align-items: center;
  min-width: 0;
  gap: 12px;
  cursor: pointer;
  padding: 10px 8px;
  border-bottom: 1px solid var(--divider-color, #e7edf2);

  img {
    width: 38px;
    border-radius: 50%;
    aspect-ratio: 1/1;
  }

  .role-name {
    display: flex;
    flex-direction: column;
  }

  .name {
    width: 100%;
    overflow: hidden;
    word-break: keep-all;
    text-overflow: ellipsis;
    font-weight: 600;
    color: var(--nav-text-color, #1e335c);
    font-size: 15px;
    margin-right: 4px;
    white-space: nowrap;
    text-align: left;
  }

  .role {
    width: 100%;
    color: var(--muted-color, #1e335c);
    overflow: hidden;
    word-break: keep-all;
    text-overflow: ellipsis;
    font-weight: 400;
    font-size: 15px;
    white-space: nowrap;
    text-align: left;
  }
}

.dropdown-item:last-child {
  border-bottom: none;
}

.dropdown-item:hover {
  background-color: var(--hover-bg, #f5f5f5);
}

.selectedItem.flash {
  animation: flashHighlight 2s ease;
}

@keyframes flashHighlight {
  0% {
    background-color: var(--info-color-bg, #d3f3ff);
  }
  50% {
    background-color: var(--info-color, #b0e7ff);
  }
  100% {
    background-color: transparent;
  }
}

::ng-deep .user-card-container {
  .dx-texteditor-input {
    background-color: var(--navbar-bg) !important;
    border: none !important;
    color: var(--nav-text-color) !important;
    font-family: var(--app-font-family);
    font-size: 15px;
    font-weight: 400;
    line-height: 23px;
    letter-spacing: -0.02em;
    text-align: left;
  }
}

